Support urn protocol in redirect uri in JavaFx